# open-multi-agent

./: LICENSE  README.md  main.py  pyproject.toml
examples/: example_01_single_agent.py  example_02_team_collaboration.py  example_03_task_pipeline.py  example_04_multi_model_team.py
src/open_multi_agent/: __init__.py  types.py
src/open_multi_agent/agent/: agent.py  pool.py  runner.py
src/open_multi_agent/llm/: adapter.py  anthropic_adapter.py  openai_adapter.py
src/open_multi_agent/memory/: shared.py  store.py
src/open_multi_agent/orchestrator/: orchestrator.py  scheduler.py
src/open_multi_agent/task/: queue.py  task.py
src/open_multi_agent/team/: messaging.py  team.py
src/open_multi_agent/tool/: executor.py  framework.py
src/open_multi_agent/tool/built_in/: __init__.py  bash.py  file_edit.py  file_read.py  file_write.py  grep_tool.py
src/open_multi_agent/utils/: semaphore.py
